<resources>
    <string name="app_name">YouTeam</string>

    <string name="forgot"><u>Забыли пароль?</u></string>
    <string name="prompt_email">Электронная почта</string>
    <string name="action_sign_in_short">Пароль</string>
    <string name="create">Создать аккаунт</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="title_activity_bads">Добавки</string>
    <string name="title_activity_login">Вход</string>
    <string name="filter">Применить фильтры:</string>
    <string name="bads">Подборка БАДов</string>
    <string name="results">Результаты тестирования</string>
    <string name="returnToBads">Вернуться к списку БАДов</string>
    <string name="finishTest">Завершить тестирование</string>
    <string name="res">Завершить тестирование</string>
    <string name="program">Посмотреть программы</string>
    <string name="programs">Программы</string>
    <string name="withoutSign"><u>Продолжить без входа</u></string>
    <string name="more">Подробнее</string>

    <string name="resultMessage">Согласно введённым данным, причиной Ваших "неудобств" может стать недостаток </string>
    <string name="beforeTest">Предлагаем пройти несложный тест, чтобы подобрать БАД, который подойдёт именно Вам.</string>

    <string-array name="filters">
        <item>Фильтр 1</item>
        <item>Фильтр 2</item>
        <item>Фильтр 3</item>
        <item>Фильтр 4</item>
    </string-array>
    <string name="title_activity_custome_calendar">CustomeCalendar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>