<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/bright_green"
        android:padding="15dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="24dp"
            android:scaleType="centerCrop"
            android:background="@drawable/pill"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="12"
            android:layout_height="wrap_content"
            android:text="@string/bads"
            android:paddingLeft="12dp"/>
        <ImageView
            android:id="@+id/menu"
            android:scaleType="centerCrop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/menu"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/programs"
        android:textAlignment="center"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/light_green"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Комплекс 1"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="70dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="70dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="Омега-3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"

                    android:text="Калий и Магний" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="Креатин"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_button"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/more"
            android:textAllCaps="false"
            android:onClick=""/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/light_green"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Комплекс 2"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="70dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="70dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="Лецитин" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"

                    android:text="Магний" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="BCAA"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_button"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/more"
            android:textAllCaps="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="25dp"
            android:layout_height="wrap_content"
            android:text="Вернуться ко всем БАДам"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:letterSpacing="0"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/rounded_button"
            android:onClick="openBads"/>
    </LinearLayout>
</LinearLayout>